# medical-gan-oct

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cyclegan_cbam.yaml  cyclegan_cbam_colab.yaml  cyclegan_cbam_demo.yaml  cyclegan_no_cbam_demo.yaml
docs/: HANDBOOK.md
notebooks/: train_colab.ipynb
scripts/: evaluate.py  infer.py  train.py
src/: data_loader.py  degrade_images.py  visualize.py
src/data/: dataset.py
src/losses/: cyclegan_losses.py
src/models/: cbam.py  discriminator.py  generator.py
src/training/: buffer.py  trainer.py
src/utils/: visualize.py
